<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Current Ride</string>
    <string name="title_notifications">User</string>


    <string name="user_name">Name: </string>
    <string name="user_age">Age: </string>
    <string name="user_weight">Weight: </string>
    <string name="user_gender">Gender: </string>
    <string name="save">Save</string>


    <string name="hm19">Read Data</string>
    <string name="ble_scan">Write Data</string>
    <string name="title_activity_main2">MainActivity2</string>

    <!-- COPIED FOR BLE SCANNING -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- New Button Items -->
    <string name="write">Write Data</string>
    <string name="back">Back</string>
    <string name="notify">Read Data</string>

    <string name="google1">Read Data</string>
    <string name="google2">Write Data</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>




</resources>